@@ -35,6 +35,7 @@
     <setting id="stream_read_minimum_byte_count" label="30114" type="enum" lvalues="30218|30219|30220|30221|30222|30223" default="1"/>
     <setting id="stream_ring_buffer_size" label="30115" type="enum" lvalues="30224|30225|30226|30227|30228" default="2"/>
     <setting id="verbose_discovery_logging" label="30124" type="bool" default="false"/>
+    <setting id="disable_realtime_indicator" label="30125" type="bool" default="false"/>
   </category>
 
 </settings>
